# quill

./: .gitignore  BUILD-APPIMAGE.md  BUILD-LINUX.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.3.0.md  app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web/: app.js  index.html  style.css
